# esg-core

./: LICENSE  README.md
agent/: openai_func_agent.py
chain/: qa.py  test-summ.ipynb  test_qa.ipynb
data/: README.md  app.py  pyproject.toml
examples/langchain/text_splitter/: coid_industry.csv  data_init.py  semantic_chunker.py  split_by_character.py  split_by_token.py  wrangler.py
qdrant_cloud/: sample_call.sh
